added startup scripts to ignored folders

--- a/ruff.toml
+++ b/ruff.toml
@@ -27,6 +27,7 @@ exclude = [
     "site-packages",
     "venv",
     "client/ayon_hiero/vendor",
+    "client/ayon_hiero/api/startup/Python",
 ]
 
 # Same as Black.
